--- a/studio/public/css/custom.css
+++ b/studio/public/css/custom.css
@@ -4266,6 +4266,7 @@ body:has(.offcanvas) {
 
 .post-entry h4 {
   font-size: 30px;
+  line-height: 1.7;
 }
 
 .post-entry h5 {
@@ -5111,6 +5112,7 @@ body:has(.offcanvas) {
 
 .pricing-title h3 {
   font-size: 30px;
+  line-height: 1.7;
   text-transform: capitalize;
   margin-bottom: 10px;
 }
@@ -5936,6 +5938,7 @@ body:has(.offcanvas) {
 
   .agency-social-item .icon-box i {
     font-size: 30px;
+    line-height: 1.7;
   }
 
   .agency-social-content h3 {
@@ -7004,6 +7007,7 @@ body:has(.offcanvas) {
 
   .section-title h2 {
     font-size: 30px;
+    line-height: 1.7;
   }
 
   .hero-content {
@@ -7106,6 +7110,7 @@ body:has(.offcanvas) {
 
   .success-counter-item h2 {
     font-size: 30px;
+    line-height: 1.7;
   }
 
   .success-list-item {
@@ -7436,6 +7441,7 @@ body:has(.offcanvas) {
   }
 
   .experts-counter-content h2 {
+    line-height: 1.7;
     font-size: 30px;
   }
 
@@ -7503,6 +7509,7 @@ body:has(.offcanvas) {
 
   .service-entry h2 {
     font-size: 30px;
+    line-height: 1.7;
   }
 
   .service-entry-list-image {
@@ -7664,6 +7671,7 @@ body:has(.offcanvas) {
 
   .project-entry h2 {
     font-size: 30px;
+    line-height: 1.7;
   }
 
   .project-entry ul li {
@@ -7746,6 +7754,7 @@ body:has(.offcanvas) {
   }
 
   .team-single-content h2 {
+    line-height: 1.7;
     font-size: 30px;
   }
 
@@ -7794,6 +7803,7 @@ body:has(.offcanvas) {
   .team-single-contact-form h3 {
     font-size: 30px;
     padding: 20px;
+    line-height: 1.7;
   }
 
   .team-single-contact-form form {
@@ -7816,6 +7826,7 @@ body:has(.offcanvas) {
 
   .pricing-price h2 {
     font-size: 30px;
+    line-height: 1.7;
   }
 
   .pricing-price h2 sup {
